# comp1100-assignment3-Haskell-AI-Othello

./: README.md  Setup.hs  comp1100-assignment3.cabal
app/: Main.hs
src/: AI.hs  Config.hs  Game.hs  GameState.hs
src/Dragons/: Config.hs  GUI.hs  Network.hs  Timeout.hs
test/: OthelloTest.hs  Testing.hs
